# CppResultType

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  appveyor.yml  cppresulttypeConfig.cmake.in
Tests/: CMakeLists.txt  Test_1.cpp  Test_hepler.cpp  Test_possible_combinations.cpp  Test_tuple_holding_result.cpp  Test_with_variants.cpp  properties_tests.cpp
cmake/feature_tests/can_use_constexpr_if/: CMakeLists.txt  main.cpp
cmake/feature_tests/can_use_overload_pattern/: CMakeLists.txt  main.cpp
cmake/feature_tests/can_use_std_optional/: CMakeLists.txt  main.cpp
cmake/feature_tests/can_use_std_variant/: CMakeLists.txt
cmake/feature_tests/test_for_std_apply/: CMakeLists.txt  test_for_std_apply.cpp
cmake/modules/: MunkeiVersionFromGit.cmake  catch2.cmake  doctest.cmake  gitversion.cmake  setoptions.cmake  version.cmake.in  warnings.cmake
components/: CMakeLists.txt
components/result/: CMakeLists.txt  cppresulttype_result-config.cmake.in  cppresulttype_resulttype-config.cmake.in
components/result/Tests/: CMakeLists.txt  Test_helper_success_error.cpp  Test_hepler.cpp  Test_into_exitcode.cpp  Test_main.cpp  Test_pipeoperator.cpp  Test_possible_combinations.cpp  Test_stream.cpp  Test_tuple_holding_result.cpp  Test_with_variants.cpp  properties_tests.cpp
components/result/Tests/typetraits/: CMakeLists.txt  Test_type_traits.cpp
components/result/include/result_type/: apply.hpp  helper.hpp  optional.hpp  pipeoperator.hpp  pipeoperator_cpp14.hpp  pipeoperator_cpp17.hpp  result.h  result.hpp  typetraits.h  typetraits.hpp  variant.hpp
components/result/include/result_type/detail/: returntype.hpp  value_type_of.hpp
components/result/include/result_type/helper/: into_exitcode.hpp  stream.hpp  success_tuple_or_err.hpp
components/result/include/result_type/helper/detail/: apply.hpp  success_type.hpp
components/version/: CMakeLists.txt  cppresulttype_version-config.cmake.in  version.hpp.in
include/: result_type.h  typetraits.h
